fix(sidebar): improve color contrast
Closes https://github.com/dequelabs/axe-firefox-devtools/issues/45

--- a/data/panel/panel.css
+++ b/data/panel/panel.css
@@ -145,7 +145,9 @@ h1, h2, h3, h4, h5, h6 {
 	background-position: right center, right center, left top;
 	background-size: auto auto, 1px auto, auto auto;
 }
-
+.axe-issue-list .side-menu-widget-item.selected a {
+	color: #fff;
+}
 .axe-issue-list .help {
 	flex: 1 1 auto;
 }
